# gamelauncher

./: LICENSE  README.md  cabal.project  flake.nix  gamelauncher.cabal  hello.cabal  hie.yaml  stack.yaml  test.json
app/: Main.hs
src/: GameOverrides.hs  System.hs  gamelauncher.hs  hello.hs
test/: Spec.hs
