-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: gamelauncher
version: 1.0.0.2
license-file: LICENSE
author: Mark Bishop
stability: stable
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

Description:
  This is a launcher which execute a command depending on what system and game are selected

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable gamelauncher
  hs-source-dirs: src
  main-is: gamelauncher.hs
  build-depends: base >= 4.2 && < 5, aeson, text, bytestring, optparse-applicative, filepath, text-replace, process, regex-compat

  if flag(threaded)
     ghc-options: -threaded
