cabal-version:   2.4
name:            gamelauncher
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Mark Bishop
maintainer:      Mark Bishop <mbishop1990@gmail.com>
copyright:       2023 Mark Bishop
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/gamelauncher#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/gamelauncher.git

common common-options
  build-depends:    base >=4.9 && <5
    , text
    , bytestring
    , aeson
    , libiserv
    , text-replace
    , regex-compat
    , process
    , filepath
    , optparse-applicative
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: GameOverrides System
  build-depends:
    , containers
    , mtl

executable gamelauncher
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  gamelauncher
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:

test-suite gamelauncher-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , gamelauncher
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark gamelauncher-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , gamelauncher

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
